--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,107 +1,227 @@
-@media (min-width:769px) {
+// Large devices (desktops, 992px and up)
 
-
+@media (min-width: 992px) {
 /*nav light*/
+.nav {        
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+    height: 100px;
+    border-bottom: solid;
+    border-color: $colorStone;
+    border-width: 0.5px; 
+    font-size: $base;
+    background-color: $colorGreen;
+
+    .logo {
+        color: $colorStone;
+        font-size: $delta;
+        padding-left: 3rem;
+    }
+
+    .menu {
+        ul{
+            display: flex;
+            justify-content: flex-end;
+            
+            li {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                align-items: center;
+                border-left: solid;
+                border-color: $colorStone;
+                border-width: 0.5px; 
+                height: 100px;
+                padding-right: 50px;
+                padding-left: 50px;
+                letter-spacing: 1px;
+        
+            }
+        
+        
+        }
+
+    }
+
+}
+
+
+/*nav dark*/
+.navGreen {        
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+    height: 100px;
+    border-bottom: solid;
+    border-color: $colorGreen ;
+    border-width: 0.5px; 
+    font-size: $base ;
+
+    .logoGreen {
+        color: $colorGreen;
+        font-size: $delta;
+        padding-left: 3rem;
+
+        a {
+            color: $colorGreen;
+        }
+    }
+
+    .menuGreen{
+
+        ul{
+            display: flex;
+            justify-content: flex-end;
+
+            li {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                align-items: center;
+                border-left: solid;
+                border-color: $colorGreen;
+                border-width: 0.5px; 
+                height: 100px;
+                padding-right: 50px;
+                padding-left: 50px;
+                letter-spacing: 1px;
+
+                a{
+                    color: $colorGreen;
+                }
+            
+            
+            }
+        }
+
+
+    }
+
+} 
+}
+
+@media (min-width:768px ) and (max-width:991px) {
+
+
+    /*navLight*/
+
     .nav {        
         display:flex;
         flex-direction: row;
-        justify-content: space-between;
-        align-items: baseline;
-        height: 100px;
+        justify-content: center;
+        flex-wrap: wrap;
+        height: auto;
         border-bottom: solid;
         border-color: $colorStone;
         border-width: 0.5px; 
         font-size: $base;
-        background-color: $colorGreen;
 
         .logo {
             color: $colorStone;
-            font-size: $delta;
-            padding-left: 3rem;
+            font-size: $epsilon;
+            padding: 1rem;
+            text-align: center;
         }
 
         .menu {
+            border-top: solid;
+            border-color: $colorStone;
+            border-width: 0.5px; 
+            width: 100%;
+
             ul{
                 display: flex;
-                justify-content: flex-end;
-                
-                li {
-                    display: flex;
-                    flex-direction: row;
-                    flex-wrap: wrap;
-                    align-items: center;
-                    border-left: solid;
-                    border-color: $colorStone;
-                    border-width: 0.5px; 
-                    height: 100px;
-                    padding-right: 50px;
-                    padding-left: 50px;
-                    letter-spacing: 1px;
-            
-                }
-            
-            
-            }
+                flex-direction: row;
+                flex-wrap: wrap;
+                margin-top: 0px;
+                align-items: center;
+                justify-content: center;
+                padding-left:0px ;
+                margin-bottom: 0px;
 
+                    li {
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: wrap;
+                        align-items: center;
+                        padding: 10px 25px;
+                        letter-spacing: 1px;
+                        
+                
+                    }
+                }
         }
 
     }
 
+    .menu li:nth-child(-n + 2){border-right:solid; border-width: 0.5px; border-color: $colorStone;
+    }
 
-    /*nav dark*/
+    /*navGreen*/
+
     .navGreen {        
         display:flex;
         flex-direction: row;
-        justify-content: space-between;
-        align-items: baseline;
-        height: 100px;
+        justify-content: center;
+        flex-wrap: wrap;
+        height: auto;
         border-bottom: solid;
-        border-color: $colorGreen ;
+        border-color: $colorGreen;
         border-width: 0.5px; 
-        font-size: $base ;
+        font-size: $base;
 
         .logoGreen {
             color: $colorGreen;
-            font-size: $delta;
-            padding-left: 3rem;
+            font-size: $epsilon;
+            padding: 1rem;
+            text-align: center;
 
-            a {
+            a{
                 color: $colorGreen;
             }
         }
 
-        .menuGreen{
+        .menuGreen {
+            border-top: solid;
+            border-color: $colorGreen;
+            border-width: 0.5px; 
+            width: 100%;
+
+            a{
+                color: $colorGreen;
+            }
 
             ul{
                 display: flex;
-                justify-content: flex-end;
+                flex-direction: row;
+                flex-wrap: wrap;
+                margin-top: 0px;
+                align-items: center;
+                justify-content: center;
+                padding-left:0px ;
+                margin-bottom: 0px;
 
-                li {
-                    display: flex;
-                    flex-direction: row;
-                    flex-wrap: wrap;
-                    align-items: center;
-                    border-left: solid;
-                    border-color: $colorGreen;
-                    border-width: 0.5px; 
-                    height: 100px;
-                    padding-right: 50px;
-                    padding-left: 50px;
-                    letter-spacing: 1px;
-
-                    a{
-                        color: $colorGreen;
+                    li {
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: wrap;
+                        align-items: center;
+                        padding: 10px 25px;
+                        letter-spacing: 1px;
+                        
+                
                     }
-                
-                
                 }
-            }
-
-
         }
 
     }
-        
+
+
+    .menuGreen li:nth-child(-n + 2){border-right:solid; border-width: 0.5px; border-color: $colorGreen;
+    }
 
 }
 
