--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,11 @@
 @import "variables";
 @import "general";
 @import "nav";
+@import "components";
+@import "footer";
+@import "home";
+@import "animation";
+@import "work";
+@import "contact";
+@import "about";
+@import "project";
