--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -148,7 +148,7 @@
     }
 
     .introText{
-        font-size: $gama;
+        font-size: $delta;
         color: $colorStone;
         font-weight:300;
         line-height: 110%;
@@ -157,9 +157,9 @@
     }
 
     .exploreHome {
-        margin: 1rem;
+        margin: 1rem;    
         a{
-            font-size: $delta;
+            font-size: $epsilon;
         }
     }
 
