--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -141,7 +141,7 @@
     }
 
     .titleWork{
-        font-size: $gama;
+        font-size: $delta;
         color: $colorStone;
         font-weight:300;
         line-height: 110%;
