--- a/css/style.css
+++ b/css/style.css
@@ -266,8 +266,11 @@ body {
   }
   .nav .logo {
     color: #F2E9EA;
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     padding-left: 3rem;
+  }
+  .nav .logo a {
+    font-size: 2.5rem;
   }
   .nav .menu ul {
     display: flex;
@@ -300,11 +303,12 @@ body {
   }
   .navGreen .logoGreen {
     color: #00383B;
-    font-size: 3.5rem;
     padding-left: 3rem;
+    font-size: 2.5rem;
   }
   .navGreen .logoGreen a {
     color: #00383B;
+    font-size: 2.5rem;
   }
   .navGreen .menuGreen ul {
     display: flex;
