cambios css about

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -8,8 +8,8 @@
     }
 
     .txtAbout {
-        font-size: $delta;
-        line-height: 4rem;
+        font-size: 2.5rem;
+        line-height: 4.5rem;
         color: $colorGreen;
     }
 
