--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,4 +1,8 @@
 @media (min-width: 1200px) {
+    .contentContact{
+        width: 70%;
+    }
+
     .titleContact {
         font-size: $beta;
         line-height: 4rem;
@@ -91,6 +95,9 @@
 }
 
 @media (min-width: 992px) and (max-width:1200px) {
+    .contentContact{
+        width: 70%;
+    }
 
     .titleContact {
         font-size: $beta;
@@ -184,6 +191,10 @@
 }
     
 @media (min-width:768px ) and (max-width:991px) {
+
+    .contentContact{
+        width: 100%;
+    }
 
     .titleContact {
         font-size: $gama;
@@ -279,6 +290,10 @@
 }
     
 @media (max-width:768px) {
+
+    .contentContact{
+        width: 100%;
+    }
 
     .titleContact {
         font-size: $gama;
