--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,15 +1,15 @@
 @media (min-width: 1200px) {
 
     .introTextAbout {
-        font-size: $gama;
-        line-height: 6rem;
+        font-size: $delta;
+        line-height: 5rem;
         color: $colorGreen;
 
     }
 
     .txtAbout {
-        font-size: 2.5rem;
-        line-height: 4.5rem;
+        font-size: $epsilon;
+        line-height: 4rem;
         color: $colorGreen;
     }
 
