--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -87,7 +87,7 @@
         h3{
             a{
                 color: $colorGreen;
-                font-size: $gama;
+                font-size: $delta;
                 &:hover{
                     color: $colorGreenLight;
         
