--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -9,8 +9,11 @@
 
     .txtAbout {
         font-size: $epsilon;
-        line-height: 4rem;
+        line-height: 3rem;
         color: $colorGreen;
+        padding-left: 3rem;
+        padding-top: 3rem;
+        text-align: justify;
     }
 
 
@@ -24,16 +27,19 @@
 @media (min-width: 992px) and (max-width:1200px) {
 
     .introTextAbout {
-        font-size: $gama;
-        line-height: 6rem;
+        font-size: $delta;
+        line-height: 5rem;
         color: $colorGreen;
 
     }
 
     .txtAbout {
-        font-size: $delta;
-        line-height: 4rem;
+        font-size: $epsilon;
+        line-height: 3rem;
         color: $colorGreen;
+        text-align: justify;
+        padding-left: 3rem;
+        padding-top: 3rem;
     }
 
 
@@ -48,7 +54,7 @@
 
     .introTextAbout {
         font-size: $delta;
-        line-height: 4rem;
+        line-height: 5rem;
         color: $colorGreen;
 
     }
@@ -57,6 +63,9 @@
         font-size: $epsilon;
         line-height: 3rem;
         color: $colorGreen;
+        text-align: justify;
+        padding-left: 3rem;
+        padding-right: 3rem;
     }
 
 }
@@ -73,5 +82,6 @@
         font-size: $epsilon;
         line-height: 3rem;
         color: $colorGreen;
+        text-align: justify;
     }
 }
