--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,6 +1,6 @@
 @media (min-width: 1200px) {
 
-    .introTextAbout {
+    .introTextAbout h1 {
         font-size: $delta;
         line-height: 5rem;
         color: $colorGreen;
@@ -26,7 +26,7 @@
 
 @media (min-width: 992px) and (max-width:1200px) {
 
-    .introTextAbout {
+    .introTextAbout h1{
         font-size: $delta;
         line-height: 5rem;
         color: $colorGreen;
@@ -52,7 +52,7 @@
     
 @media (min-width:768px ) and (max-width:991px) {
 
-    .introTextAbout {
+    .introTextAbout h1{
         font-size: $delta;
         line-height: 5rem;
         color: $colorGreen;
@@ -71,7 +71,7 @@
 }
     
 @media (max-width:768px) {
-    .introTextAbout {
+    .introTextAbout h1{
         font-size: $delta;
         line-height: 4rem;
         color: $colorGreen;
